<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_barcode_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/item_sort"
        android:icon="@drawable/ic_barcode_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/item_recent"
                    android:title="@string/recent"
                    app:showAsAction="withText" />
                <item
                    android:id="@+id/item_most_frequent"
                    android:title="@string/most_frequent"
                    app:showAsAction="always" />
                <item
                    android:id="@+id/item_alphabetical"
                    android:title="@string/alphabetical"
                    app:showAsAction="withText" />
            </group>
        </menu>
    </item>

</menu>