<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_detail"
        android:icon="@drawable/ic_barcode_detail"
        android:title="@string/detail"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_barcode_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_favorite"
        android:icon="@drawable/ic_barcode_unfavorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_copy"
        android:icon="@drawable/ic_barcode_copy"
        android:title="@string/copy_"
        app:showAsAction="ifRoom" />

</menu>