<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/barcode_scanner_fragment">

    <fragment
        android:id="@+id/barcode_scanner_fragment"
        android:name="com.hapley.pocketqr.features.barcode.ui.scanner.BarcodeScannerFragment"
        android:label="@string/scanner"
        tools:layout="@layout/barcode_scanner_fragment">
        <action
            android:id="@+id/action_to_barcodeHistoryFragment"
            app:destination="@id/barcode_history_fragment" />

        <action
            android:id="@+id/action_to_settingsFragment"
            app:destination="@id/settings_fragment" />

    </fragment>

    <fragment
        android:id="@+id/barcode_history_fragment"
        android:name="com.hapley.pocketqr.features.barcode.ui.history.BarcodeHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/barcode_history_fragment">
        <action
            android:id="@+id/action_to_barcodeScannerFragment"
            app:destination="@id/barcode_scanner_fragment" />

        <action
            android:id="@+id/action_to_barcodeDetailFragment"
            app:destination="@id/barcode_detail_fragment"/>

    </fragment>

    <fragment
        android:id="@+id/barcode_detail_fragment"
        android:name="com.hapley.pocketqr.features.barcode.ui.detail.BarcodeDetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/barcode_detail_fragment">

        <argument
            android:name="BARCODE_ID"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.hapley.pocketqr.ui.settings.SettingsFragment"
        android:label="@string/settings" />
</navigation>